--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "autoprefixer": "10.2.5",
     "chart.js": "2.9.4",
+    "fa-icons": "^0.2.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "openai": "^4.53.2",
     "postcss": "8.4.39",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-modal": "^3.16.1",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
